# indexer

./: .gitignore  Cargo.toml  build.rs  flake.nix
migrations/: 20240414233748_initial.sql  20240415010251_update_field.sql  20240416014614_embedding_table.sql  20240416230244_clear_on_hash_change.sql  20240417213835_embedding_contents.sql
sqlite-vss/: update-deps.bb
src/: config.rs  context.rs  main.rs  platform.rs
src/commands/: ai.rs  embeddings.rs  indexer.rs  mod.rs  search.rs
src/entity/: columns.rs  mod.rs
src/entity/types/: file.rs  file_embedding.rs  mod.rs
src/services/: embeddings.rs  files.rs  indexer.rs  mod.rs
src/services/ai/: mod.rs  service.rs  types.rs  utils.rs
